@@ -17,14 +17,14 @@ If you don't have a <tt>/package</tt> directory, create it now:
   # chmod 1755 /package
 </pre>
 Download
-<a href="runit-1.0.4.tar.gz">runit-1.0.4.tar.gz</a> into <tt>/package</tt>
+<a href="runit-1.0.5.tar.gz">runit-1.0.5.tar.gz</a> into <tt>/package</tt>
 and unpack the archive
 <pre>
   # cd /package
-  # gunzip runit-1.0.4.tar
-  # tar -xpf runit-1.0.4.tar
-  # rm runit-1.0.4.tar
-  # cd admin/runit-1.0.4
+  # gunzip runit-1.0.5.tar
+  # tar -xpf runit-1.0.5.tar
+  # rm runit-1.0.5.tar
+  # cd admin/runit-1.0.5
 </pre>
 On MacOSX, do
 <pre>
@@ -43,7 +43,7 @@ hierarchy, do:
 </pre>
 To report success:
 <pre>
-  # mail pape-runit-1.0.4@smarden.org &lt;compile/sysdeps
+  # mail pape-runit-1.0.5@smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>runit</i> regularly, please
 <a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
