@@ -117,7 +117,7 @@ default Unix process no 1 <i>runit</i>.
 </pre>
 To report success:
 <pre>
- # ( uname -a ; cat /etc/runit/[123] ) |mail pape-runit-1.0.4@smarden.org
+ # ( uname -a ; cat /etc/runit/[123] ) |mail pape-runit-1.0.5@smarden.org
 </pre>
 <hr>
 
@@ -206,7 +206,7 @@ This will cause <i>runit</i> to enter stage 3 which runs
 <p>
 To report success:
 <pre>
- # ( uname -a ; cat /etc/runit/[123] ) | mail pape-runit-1.0.4@smarden.org
+ # ( uname -a ; cat /etc/runit/[123] ) |mail pape-runit-1.0.5@smarden.org
 </pre>
 <h3>Step 5: Service migration</h3>
 The goal is to migrate all services from <i>/etc/rc.*</i> scheme to the
