@@ -28,3 +28,4 @@
 1.0.2
 1.0.3
 1.0.4
+1.0.5
